Created separate folder for logo and background images, updated index.html and main.css

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
 	<div id="logo">
-	<img src="images/Logo.png" id="logo-img"></img>
+		<img src="Images2/Logo.png" id="logo-img"></img>
 	</div>
 
 	<h3>"From business proposals to wedding invitations, we provide stationery for every occasion"</h3>
@@ -33,10 +33,10 @@
 
 
 	<div class="div-footer">
-	<footer id="MD-footer"></footer>
+		<footer id="MD-footer"></footer>
 
-	<h3>103 Coulter Ave, Ardmore, PA 19003</h3>
-	<h3>(610) 642-2027</h3>
+		<h3>103 Coulter Ave, Ardmore, PA 19003</h3>
+		<h3>(610) 642-2027</h3>
 	</div>
 
 <script src="main.js"></script>
